<resources>
    <string name="app_name">SendMe</string>
    <string name="title_sign_in">Sign Up</string>
    <string name="label_username">Name</string>
    <string name="label_password">Password</string>
    <string name="copyright">Copyright © 2022 JGVG Inc. All rights reserved.</string>
    <string name="label_email">Email</string>
    <string name="have_an_account">Have an account?</string>
    <string name="title_log_in">Log In</string>
    <string name="no_have_an_account">Don\'t have an account?</string>
    <string name="label_remember">Remember me</string>
    <string name="extended_fab_label_text">ACCESS</string>
    <string name="extended_fab_label_text_to">log in</string>
    <string name="title_home">Welcome!!</string>
    <string name="error_message_log_in_auth">User no exists</string>
    <string name="error_message_sig_up_auth">Register fails</string>
    <string name="extended_fab_label_text_out">Log Out</string>
    <string name="error_message_ilegal_access">ILEGAL ACCESS</string>
    <string name="title_profile">Profile</string>
    <string name="txtDischargeDate">Joined on %s</string>
    <string name="title_contacts">CONTACTS</string>
    <string name="label_search">Search</string>
    <string name="label_descript">Description</string>
    <string name="label_home">Location</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_discharge">Discharge date</string>
    <string name="label_web_site">Web</string>
    <string name="chat_text">chat</string>
    <string name="sign_out">Sign out</string>
    <string name="title_edit">EDIT</string>
    <string name="save">save</string>
    <string name="loading_text">Please Wait</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_messages">Messages</string>
    <string name="text_message">Message</string>
    <string name="here">Here!</string>
    <string name="not_found_contact">Not Found</string>
</resources>