<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="370dp"
        android:layout_height="570dp"
        app:cardCornerRadius="30dp"
        android:src="@drawable/default_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/buttonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@color/background_button_sendMe"
                android:clickable="false"
                android:textColor="@color/white"
                app:icon="@drawable/camera_icon"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:rippleColor="@color/white" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintBottom_toTopOf="@+id/textFieldUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:hint="@string/label_username"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/textFieldDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icoUser"
                app:layout_constraintTop_toBottomOf="@+id/profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldDescription"
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:hint="@string/label_descript"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="150"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/textFieldLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icoDescription"
                app:layout_constraintTop_toBottomOf="@+id/textFieldUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="150" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                android:hint="@string/label_home"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/textFieldSite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/icoHome"
                app:layout_constraintTop_toBottomOf="@+id/textFieldDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldSite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:hint="@string/label_web_site"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/icoWebSiteURL"
                app:layout_constraintTop_toBottomOf="@+id/textFieldLocation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icoHome"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/textFieldLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textFieldLocation"
                app:srcCompat="@drawable/home_pin"
                app:tint="#4f9a94" />


            <ImageView
                android:id="@+id/icoUser"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintBottom_toBottomOf="@+id/textFieldUsername"
                app:layout_constraintStart_toStartOf="@+id/icoHome"
                app:layout_constraintTop_toTopOf="@+id/textFieldUsername"
                app:srcCompat="@drawable/outline_person_black_24dp"
                app:tint="#4f9a94" />

            <ImageView
                android:id="@+id/icoDescription"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintBottom_toBottomOf="@+id/textFieldDescription"
                app:layout_constraintStart_toStartOf="@+id/icoHome"
                app:layout_constraintTop_toTopOf="@+id/textFieldDescription"
                app:srcCompat="@drawable/description_ico"
                app:tint="#4f9a94" />

            <ImageView
                android:id="@+id/icoWebSiteURL"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintBottom_toBottomOf="@+id/textFieldSite"
                app:layout_constraintStart_toStartOf="@+id/icoHome"
                app:layout_constraintTop_toTopOf="@+id/textFieldSite"
                app:srcCompat="@drawable/link_ico"
                app:tint="#4f9a94" />

            <ImageView
                android:id="@+id/buttonSave"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_publish_black_24dp"
                app:tint="@color/background_sendMe" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>